--- a/travelWebSite.html
+++ b/travelWebSite.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Love2Travel</title>
-    
+    <link rel="stylesheet" href="travelWebSite.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+
 </head>
 <body>
+    <nav class="container container-fluid">
+        <div class="row">
+            <div class="col-2">
+                HOME
+            </div>
+            <div class="col-2">
+                ABOUT US
+            </div>
+            <div class="col-4">
+                LOGO
+            </div>
+            <div class="col-2">
+                CONTACTS
+            </div>
+            <div class="col-2">
+                PROMO
+            </div>
+        </div>
+    </nav>
     
 </body>
 </html>
