--- a/travelWebSite.html
+++ b/travelWebSite.html
@@ -11,25 +11,38 @@
 
 </head>
 <body>
-    <nav class="container container-fluid">
+    <nav class="container">
         <div class="row">
-            <div class="col-2">
+            <div class="col-1 nav-containers">
+                <img class="nav-img-logo" src="https://i.pinimg.com/564x/1f/3a/6c/1f3a6cc746ca032805bd9a641b311bbf.jpg" alt="">
+            </div>
+            
+            <div class="col-2 nav-containers">
                 HOME
             </div>
-            <div class="col-2">
-                ABOUT US
+            <div class="col-2 nav-containers">
+                HOTELS
             </div>
-            <div class="col-4">
-                LOGO
+            <div class="col-2 nav-containers">
+                PROMO
             </div>
-            <div class="col-2">
+            <div class="col-2 nav-containers" >
+                FLIGHTS
+            </div>
+            <div class="col-2 nav-containers">
                 CONTACTS
             </div>
-            <div class="col-2">
-                PROMO
+            <div class="col-1 nav-containers">
+                <img class="nav-img-logo" src="https://i.pinimg.com/564x/8f/31/35/8f31356a32ad5bf570c63c0c696b9843.jpg" alt="">
             </div>
         </div>
     </nav>
+    <div class="jumbotron">
+        <h1 class="display-1"> <img class="nav-img-logo" src="https://i.pinimg.com/564x/8f/31/35/8f31356a32ad5bf570c63c0c696b9843.jpg" alt="">
+        Love 2 Travel</h1>
+        <p class="lead">This is the main website for your lovely vaccations, no other spot could provide you the best satisfaction at this prices. Enjoy the Magazine of your dream vaccations!</p>
+        <hr class="my-4">
+    </div>
     
 </body>
 </html>
