--- a/travelWebSite.html
+++ b/travelWebSite.html
@@ -37,12 +37,52 @@
             </div>
         </div>
     </nav>
-    <div class="jumbotron">
+    <div class="jumbotron intro-logo">
         <h1 class="display-1"> <img class="nav-img-logo" src="https://i.pinimg.com/564x/8f/31/35/8f31356a32ad5bf570c63c0c696b9843.jpg" alt="">
         Love 2 Travel</h1>
         <p class="lead">This is the main website for your lovely vaccations, no other spot could provide you the best satisfaction at this prices. Enjoy the Magazine of your dream vaccations!</p>
         <hr class="my-4">
+    </div><div class="container">
+        <div class="row welcome-text">
+            <h2 class="col-4 welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
+            <h2 class="col-4 welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
+            <h2 class="col-4 welcome-text"> <<< DEAL OF THE WEAK >>> </h2>        </div>
     </div>
-    
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
+            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/1591373/pexels-photo-1591373.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+        </div>
+    </div><div class="container">
+        <div class="row welcome-text">
+            <h2 class="col-4 welcome-text"> <<< WELCOME SUMMER >>> </h2>
+            <h2 class="col-4 welcome-text"> <<< WELCOME SUMMER >>> </h2>
+            <h2 class="col-4 welcome-text"> <<< WELCOME SUMMER >>> </h2>        </div>
+    </div>
+    </div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
+            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/1591373/pexels-photo-1591373.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+        </div>
+    </div>
+</div><div class="container">
+    <div class="row welcome-text">
+        <h2 class="col-4 welcome-text"> <<< DEAL OF THE DAY >>> </h2>
+        <h2 class="col-4 welcome-text"> <<< DEAL OF THE DAY >>> </h2>
+        <h2 class="col-4 welcome-text"> <<< DEAL OF THE DAY >>> </h2>        </div>
+</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
+            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+        </div>
+    </div>
 </body>
 </html>
