--- a/travelWebSite.html
+++ b/travelWebSite.html
@@ -11,7 +11,7 @@
 
 </head>
 <body>
-    <nav class="container">
+    <nav class="container-fluid">
         <div class="row">
             <div class="col-1 nav-containers">
                 <img class="nav-img-logo" src="https://i.pinimg.com/564x/1f/3a/6c/1f3a6cc746ca032805bd9a641b311bbf.jpg" alt="">
@@ -42,27 +42,30 @@
         Love 2 Travel</h1>
         <p class="lead">This is the main website for your lovely vaccations, no other spot could provide you the best satisfaction at this prices. Enjoy the Magazine of your dream vaccations!</p>
         <hr class="my-4">
-    </div><div class="container">
-        <div class="row welcome-text">
-            <h2 class="col-4 welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
-            <h2 class="col-4 welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
-            <h2 class="col-4 welcome-text"> <<< DEAL OF THE WEAK >>> </h2>        </div>
     </div>
-    <div class="container">
+    <div class="container-fluid p-0">
+        <div class="row welcome-text">
+            <h2 class="col-3 welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
+            <h2 class="col-3 welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
+            <h2 class="col-3 welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
+            <h2 class="col-3 welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
+          </div>
+    </div>
+    <div class="container-fluid p-0">
         <div class="row">
             <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
             <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
             <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
             <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/1591373/pexels-photo-1591373.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
         </div>
-    </div><div class="container">
+    </div><div class="container-fluid p-0">
         <div class="row welcome-text">
             <h2 class="col-4 welcome-text"> <<< WELCOME SUMMER >>> </h2>
             <h2 class="col-4 welcome-text"> <<< WELCOME SUMMER >>> </h2>
             <h2 class="col-4 welcome-text"> <<< WELCOME SUMMER >>> </h2>        </div>
     </div>
     </div>
-    <div class="container">
+    <div class="container-fluid p-0">
         <div class="row">
             <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
             <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
@@ -72,16 +75,16 @@
             <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
         </div>
     </div>
-</div><div class="container">
+</div><div class="container-fluid p-0">
     <div class="row welcome-text">
         <h2 class="col-4 welcome-text"> <<< DEAL OF THE DAY >>> </h2>
         <h2 class="col-4 welcome-text"> <<< DEAL OF THE DAY >>> </h2>
         <h2 class="col-4 welcome-text"> <<< DEAL OF THE DAY >>> </h2>        </div>
 </div>
-    <div class="container">
+    <div class="container-fluid p-0">
         <div class="row">
-            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
-            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="col-6 col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
+            <div class="col-6 col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
         </div>
     </div>
 </body>
