--- a/travelWebSite.html
+++ b/travelWebSite.html
@@ -44,19 +44,20 @@
         <hr class="my-4">
     </div>
     <div class="container-fluid p-0">
-        <div class="row welcome-text">
+        <div class="row g-0 welcome-text">
+           <!--  How to remove elements on a smaller screen, we did the opposite -->
             <h2 class="col-3 welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
-            <h2 class="col-3 welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
-            <h2 class="col-3 welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
-            <h2 class="col-3 welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
+            <h2 class="col-3 d-md-none welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
+            <h2 class="col-3 d-sm-none welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
+            <h2 class="col-3 d-es-none welcome-text"> <<< DEAL OF THE WEAK >>> </h2>
           </div>
     </div>
     <div class="container-fluid p-0">
-        <div class="row">
-            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
-            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
-            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
-            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/1591373/pexels-photo-1591373.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+        <div class="row g-0">
+            <div class="col-xl-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
+            <div class="col-xl-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="col-xl-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="col-xl-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/1591373/pexels-photo-1591373.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
         </div>
     </div><div class="container-fluid p-0">
         <div class="row welcome-text">
@@ -66,7 +67,7 @@
     </div>
     </div>
     <div class="container-fluid p-0">
-        <div class="row">
+        <div class="row g-0">
             <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
             <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
             <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
@@ -76,13 +77,13 @@
         </div>
     </div>
 </div><div class="container-fluid p-0">
-    <div class="row welcome-text">
+    <div class="row g-0 welcome-text">
         <h2 class="col-4 welcome-text"> <<< DEAL OF THE DAY >>> </h2>
         <h2 class="col-4 welcome-text"> <<< DEAL OF THE DAY >>> </h2>
         <h2 class="col-4 welcome-text"> <<< DEAL OF THE DAY >>> </h2>        </div>
 </div>
     <div class="container-fluid p-0">
-        <div class="row">
+        <div class="row g-0">
             <div class="col-6 col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
             <div class="col-6 col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
         </div>
