--- a/travelWebSite.html
+++ b/travelWebSite.html
@@ -59,21 +59,22 @@
             <div class="col-xl-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
             <div class="col-xl-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/1591373/pexels-photo-1591373.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
         </div>
+
     </div><div class="container-fluid p-0">
         <div class="row welcome-text">
             <h2 class="col-4 welcome-text"> <<< WELCOME SUMMER >>> </h2>
             <h2 class="col-4 welcome-text"> <<< WELCOME SUMMER >>> </h2>
-            <h2 class="col-4 welcome-text"> <<< WELCOME SUMMER >>> </h2>        </div>
-    </div>
+            <h2 class="col-4 welcome-text"> <<< WELCOME SUMMER >>> </h2>
+        </div>
     </div>
     <div class="container-fluid p-0">
         <div class="row g-0">
-            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
-            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
-            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
-            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/1591373/pexels-photo-1591373.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
-            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
-            <div class="col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/1591373/pexels-photo-1591373.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
         </div>
     </div>
 </div><div class="container-fluid p-0">
@@ -84,9 +85,20 @@
 </div>
     <div class="container-fluid p-0">
         <div class="row g-0">
-            <div class="col-6 col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
-            <div class="col-6 col-xl-4 col-md-3 col-sm-2"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
-        </div>
+            <div class="col-8"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
+            <div class="col-4">
+                <h3>Amazing Peru</h3>
+                <p>7 Set - 17 Set</p>
+                <h5>10 days</h5>
+                <h4>only <strong>750€</strong></h4>
+                <p>Dive into one of the 7 marvellous of the World, by getting to know Matchu Pichu and it's wonders.
+                    It's included flights and 4*Hotel with breakfast included
+                    guide in English for the entire vaccations, 
+                    <br>
+                    <br>
+                    snacks & drinks with extra cost
+                </p>
+            </div>
     </div>
 </body>
 </html>
