--- a/travelWebSite.html
+++ b/travelWebSite.html
@@ -79,14 +79,14 @@
     </div>
 </div><div class="container-fluid p-0">
     <div class="row g-0 welcome-text">
-        <h2 class="col-4 welcome-text"> <<< DEAL OF THE DAY >>> </h2>
-        <h2 class="col-4 welcome-text"> <<< DEAL OF THE DAY >>> </h2>
-        <h2 class="col-4 welcome-text"> <<< DEAL OF THE DAY >>> </h2>        </div>
+        <h2 class="col-4 d-sm-none d-md-block welcome-text"> <<< DEAL OF THE DAY >>> </h2>
+        <h2 class="col-4 d-sm-none d-md-block welcome-text"> <<< DEAL OF THE DAY >>> </h2>
+        <h2 class="col-4 d-sm-none d-md-block welcome-text"> <<< DEAL OF THE DAY >>> </h2>        </div>
 </div>
     <div class="container-fluid p-0">
         <div class="row g-0">
-            <div class="col-8"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
-            <div class="col-4">
+            <div class="col-8 d-sm-none d-md-block"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
+            <div class="col-4 d-sm-none d-md-block">
                 <h3>Amazing Peru</h3>
                 <p>7 Set - 17 Set</p>
                 <h5>10 days</h5>
