--- a/travelWebSite.html
+++ b/travelWebSite.html
@@ -62,19 +62,19 @@
 
     </div><div class="container-fluid p-0">
         <div class="row welcome-text">
-            <h2 class="col-4 welcome-text"> <<< WELCOME SUMMER >>> </h2>
-            <h2 class="col-4 welcome-text"> <<< WELCOME SUMMER >>> </h2>
-            <h2 class="col-4 welcome-text"> <<< WELCOME SUMMER >>> </h2>
+            <h2 class="col-4 welcome-text shadow-lg"> <<< WELCOME SUMMER >>> </h2>
+            <h2 class="col-4 welcome-text shadow-lg"> <<< WELCOME SUMMER >>> </h2>
+            <h2 class="col-4 welcome-text shadow-lg"> <<< WELCOME SUMMER >>> </h2>
         </div>
     </div>
     <div class="container-fluid p-0">
-        <div class="row g-0">
-            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
-            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
-            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
-            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/1591373/pexels-photo-1591373.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
-            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
-            <div class="col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+        <div class="row g-5">
+            <div class="shadow-lg col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/2356045/pexels-photo-2356045.jpeg?auto=compress&cs=tinysrgb&dpr=3&h=750&w=1260" alt=""></div>
+            <div class="shadow-lg col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="shadow-lg col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="shadow-lg col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/1591373/pexels-photo-1591373.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="shadow-lg col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/3155666/pexels-photo-3155666.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
+            <div class="shadow-lg col-xl-2 col-lg-3 col-md-4 col-sm-6"><img class="deal-img" src="https://images.pexels.com/photos/2387873/pexels-photo-2387873.jpeg?auto=compress&cs=tinysrgb&h=750&w=1260" alt=""></div>
         </div>
     </div>
 </div><div class="container-fluid p-0">
@@ -100,5 +100,13 @@
                 </p>
             </div>
     </div>
+    <div class="card" style="width: 18rem;">
+        <img class="card-img-top" src="https://cdn.pixabay.com/photo/2020/02/25/09/57/road-4878453_960_720.jpg" alt="Card image cap">
+        <div class="card-body">
+          <h5 class="card-title"><strong>LAOS</strong> - The land of Fantasy</h5>
+          <p class="card-text">Laos is the only landlocked country in Southeast Asia,Its thickly forested landscape consists mostly of rugged mountains, the highest of which is Phou Bia at 2,818 metres (9,245 ft), with some plains and plateaus.</p>
+          <a href="https://www.visitlaos.org/" class="btn btn-primary">Visit Laos</a>
+        </div>
+      </div>
 </body>
 </html>
