last update on the madatory one's

--- a/travelWebSite.html
+++ b/travelWebSite.html
@@ -108,5 +108,47 @@
           <a href="https://www.visitlaos.org/" class="btn btn-primary">Visit Laos</a>
         </div>
       </div>
+      
+      <div id="carouselExampleCaptions" class="carousel slide container" data-ride="carousel">
+        <ol class="carousel-indicators">
+          <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+          <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+        </ol>
+        <div class="carousel-inner row">
+          <div class="carousel-item active col-12">
+            <img src="https://images.pexels.com/photos/1848565/pexels-photo-1848565.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Johana Frank</h5>
+              <p>5 stars. nothing else to say.</p>
+            </div>
+          </div>
+          <div class="carousel-item col-12">
+            <img src="https://images.pexels.com/photos/819530/pexels-photo-819530.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Zaidu Meetan</h5>
+              <p>I will reapeat every year, thank you</p>
+            </div>
+          </div>
+          <div class="carousel-item col-12">
+            <img src="https://images.pexels.com/photos/713520/pexels-photo-713520.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940" class="d-block w-100" alt="...">
+            <div class="carousel-caption d-none d-md-block">
+              <h5>Fernando Santos</h5>
+              <p>Best prices, Best Places, Best People</p>
+            </div>
+          </div>
+        </div>
+        <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="sr-only">Previous</span>
+        </button>
+        <button class="carousel-control-next" type="button" data-target="#carouselExampleCaptions" data-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="sr-only">Next</span>
+        </button>
+      </div>
 </body>
+<footer> Love2Travel - Lisbon 25 April str, 1685-455 Portugal - +351 913 856 665
+    <h4>copyright Jorge Silva</h4>
+</footer>
 </html>
